@@ -10,6 +10,7 @@ SecureServ Module for NeoStats Changelog.
  - Replace channel join calls with more portable join_bot_to_chan function (M)
  - Fixed bug with helper delete using MAXNICK instead of correct buffer size (M)
  - Updated conf buffers to use CONFBUFSIZE (M)
+ - Fix free() position in Helpers_init (M)
 
 1.0 - Fish (F) and Mark (M) - 22 Aug, 2003
  - Fixed a problem with users signing off while NeoStats was still booting. (F)
